add the Checkout step one robot

--- a/Tests/report.html
+++ b/Tests/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,278319],[[5,6,7,8,[],[1,3221,76318],[],[[9,0,0,[10],[1,3924,71946],[]],[11,0,0,[12],[1,3925,75613],[]],[13,0,0,[14],[1,3926,73158],[]],[15,0,0,[16],[1,3959,71978],[]],[17,0,0,[18],[1,3956,54668],[]]],[],[5,5,0,0]],[19,20,21,22,[],[0,3206,147975],[],[[23,0,0,[24],[1,3914,72411],[]],[25,0,0,[26],[1,3917,75564],[]],[27,0,0,[28],[1,3966,72258],[]],[29,0,0,[30],[1,3923,73889],[]],[31,0,0,[32],[0,3973,71999,33],[]]],[],[5,4,1,0]],[34,35,36,37,[],[1,6327,270946],[],[[38,0,0,[],[1,10111,69091],[]],[38,0,0,[],[1,79205,27183],[]],[38,0,0,[],[1,106389,21173],[]],[38,0,0,[],[1,127563,27568],[]],[38,0,0,[],[1,155131,22466],[]],[38,0,0,[],[1,177598,22725],[]],[38,0,0,[],[1,200323,19774],[]],[38,0,0,[],[1,220097,23374],[]],[38,0,0,[],[1,243471,24302],[]]],[],[9,9,0,0]]],[],[],[19,18,1,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,54116],[],[[5,0,0,[],[0,1898,7391,6],[]],[5,0,0,[],[1,9291,6139],[]],[5,0,0,[],[0,15437,5810,7],[]],[5,0,0,[],[1,21248,5691],[]],[5,0,0,[],[0,26940,5831,7],[]],[5,0,0,[],[0,32773,8130,8],[]],[5,0,0,[],[1,40904,13210],[]]],[],[7,3,4,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\Users\\Lenovo\\Desktop\\SauceDemo-Project\\Tests","*.","*<p><a href=\"https://pabot.org/?ref=log\">Pabot\x3c/a> result from 35 executions.\x3c/p>","*Addtocarttest","*C:\\Users\\Lenovo\\Desktop\\SauceDemo-Project\\Tests\\addtocarttest.robot","*addtocarttest.robot","*<p>add to cart tests\x3c/p>","*Verify the product is added to cart","*addtocart","*Verify the product is remove in the cart","*removefromcart","*Verify the user is continue the shopping","*continueshopping","*Verify the product is add to cart and checkoutone","*checkoutone","*Verify the user can cancel the checkoutone process","*cancelincheckoutone","*ProductpageTest","*C:\\Users\\Lenovo\\Desktop\\SauceDemo-Project\\Tests\\ProductpageTest.robot","*ProductpageTest.robot","*<p>Product page tests\x3c/p>","*Validate the all item buttons in the menu","*alliteminmenu","*verify the about page","*aboutpage","*verify the Logout button in the product page","*logout","*verify the resetapp in the page","*resetapp","*Verify the filter as low to high","*lowtohigh","*'' does not contain '$49.99'","*LoginPageTest","*C:\\Users\\Lenovo\\Desktop\\SauceDemo-Project\\Tests\\LoginPageTest.robot","*LoginPageTest.robot","*<p>Tests to Login to Login Page\x3c/p>","*Validate Login with"]);
+window.output["strings"] = window.output["strings"].concat(["*","*CheckoutStepOneTest","*C:\\Users\\Lenovo\\Desktop\\SauceDemo-Project\\Tests\\CheckoutStepOneTest.robot","*CheckoutStepOneTest.robot","*<p>Tests to Login\x3c/p>","*Validate the checkout form page","*The text of element '<a href=\"xpath://h3[@data-test='error\">xpath://h3[@data-test='error\x3c/a>']' should have been 'Error: First Name is required' but it was 'Error: Last Name is required'.","*The text of element '<a href=\"xpath://h3[@data-test='error\">xpath://h3[@data-test='error\x3c/a>']' should have been 'Error: Postal Code is required' but it was 'Error: First Name is required'.","*The text of element '<a href=\"xpath://h3[@data-test='error\">xpath://h3[@data-test='error\x3c/a>']' should have been 'Error: Last Name is required' but it was 'Error: First Name is required'."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:16:11","fail":1,"label":"All Tests","pass":18,"skip":0}],[{"elapsed":"00:01:16","fail":0,"label":"aboutpage","pass":1,"skip":0},{"elapsed":"00:01:12","fail":0,"label":"addtocart","pass":1,"skip":0},{"elapsed":"00:01:12","fail":0,"label":"alliteminmenu","pass":1,"skip":0},{"elapsed":"00:00:55","fail":0,"label":"cancelincheckoutone","pass":1,"skip":0},{"elapsed":"00:01:12","fail":0,"label":"checkoutone","pass":1,"skip":0},{"elapsed":"00:01:13","fail":0,"label":"continueshopping","pass":1,"skip":0},{"elapsed":"00:01:12","fail":0,"label":"logout","pass":1,"skip":0},{"elapsed":"00:01:12","fail":1,"label":"lowtohigh","pass":0,"skip":0},{"elapsed":"00:01:16","fail":0,"label":"removefromcart","pass":1,"skip":0},{"elapsed":"00:01:14","fail":0,"label":"resetapp","pass":1,"skip":0}],[{"elapsed":"00:04:38","fail":1,"id":"s1","label":"Tests","name":"Tests","pass":18,"skip":0},{"elapsed":"00:01:16","fail":0,"id":"s1-s1","label":"Tests.Addtocarttest","name":"Addtocarttest","pass":5,"skip":0},{"elapsed":"00:02:28","fail":1,"id":"s1-s2","label":"Tests.ProductpageTest","name":"ProductpageTest","pass":4,"skip":0},{"elapsed":"00:04:31","fail":0,"id":"s1-s3","label":"Tests.LoginPageTest","name":"LoginPageTest","pass":9,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:52","fail":4,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:54","fail":4,"id":"s1","label":"CheckoutStepOneTest","name":"CheckoutStepOneTest","pass":3,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1747741488467;
+window.output["baseMillis"] = 1748183827025;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 278353;
+window.output["generated"] = 54193;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
