change the path of the excel files

--- a/Tests/report.html
+++ b/Tests/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,54116],[],[[5,0,0,[],[0,1898,7391,6],[]],[5,0,0,[],[1,9291,6139],[]],[5,0,0,[],[0,15437,5810,7],[]],[5,0,0,[],[1,21248,5691],[]],[5,0,0,[],[0,26940,5831,7],[]],[5,0,0,[],[0,32773,8130,8],[]],[5,0,0,[],[1,40904,13210],[]]],[],[7,3,4,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,97391],[],[[5,0,0,[],[1,1106,13116],[]],[5,0,0,[],[1,14224,11845],[]],[5,0,0,[],[1,26071,12125],[]],[5,0,0,[],[1,38198,11860],[]],[5,0,0,[],[1,50060,11810],[]],[5,0,0,[],[1,61873,11896],[]],[5,0,0,[],[1,73771,11756],[]],[5,0,0,[],[1,85529,11859],[]]],[],[8,8,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*CheckoutStepOneTest","*C:\\Users\\Lenovo\\Desktop\\SauceDemo-Project\\Tests\\CheckoutStepOneTest.robot","*CheckoutStepOneTest.robot","*<p>Tests to Login\x3c/p>","*Validate the checkout form page","*The text of element '<a href=\"xpath://h3[@data-test='error\">xpath://h3[@data-test='error\x3c/a>']' should have been 'Error: First Name is required' but it was 'Error: Last Name is required'.","*The text of element '<a href=\"xpath://h3[@data-test='error\">xpath://h3[@data-test='error\x3c/a>']' should have been 'Error: Postal Code is required' but it was 'Error: First Name is required'.","*The text of element '<a href=\"xpath://h3[@data-test='error\">xpath://h3[@data-test='error\x3c/a>']' should have been 'Error: Last Name is required' but it was 'Error: First Name is required'."]);
+window.output["strings"] = window.output["strings"].concat(["*","*CheckoutStepOneTest","*C:\\Users\\Lenovo\\Desktop\\SauceDemo-Project\\Tests\\CheckoutStepOneTest.robot","*CheckoutStepOneTest.robot","*<p>Tests to Login\x3c/p>","*Validate the checkout form page"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:52","fail":4,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:54","fail":4,"id":"s1","label":"CheckoutStepOneTest","name":"CheckoutStepOneTest","pass":3,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:01:36","fail":0,"label":"All Tests","pass":8,"skip":0}],[],[{"elapsed":"00:01:37","fail":0,"id":"s1","label":"CheckoutStepOneTest","name":"CheckoutStepOneTest","pass":8,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1748183827025;
+window.output["baseMillis"] = 1748255038821;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 54193;
+window.output["generated"] = 97476;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
